client/src/components/LoginForm/LoginForm.css
.center {
  position: -webkit-sticky;
  /* top: 50%; */
  /* left: 50%; */
  /* display: inline-block; */
  margin: auto;
  width: 325px;
  border-radius: 20px;
  padding: 20px;
  /* -webkit-transform: translate(-50%, -50%);
          transform: translate(-50%, -50%); */
  overflow: hidden;
  /* background-color: #6dd3e7 */
  background-image: -webkit-gradient(linear, left bottom, right top, from(#ff6e61), to(#e6938c));
  background-image: linear-gradient(to top right, #ff6e61, #e6938c);
}

@media screen and (max-height: 500px) {
  .center {
    -webkit-transition: -webkit-transform 0.5s;
    transition: -webkit-transform 0.5s;
    transition: transform 0.5s;
    transition: transform 0.5s, -webkit-transform 0.5s;
    /* -webkit-transform: translate(-50%, -50%) scale(0.8);
            transform: translate(-50%, -50%) scale(0.8); */
  }
}

.center .face {
  display: -webkit-box;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
          flex-direction: column;
  -webkit-box-align: center;
          align-items: center;
  width: 200px;
  height: 150px;
  margin: 80px auto 10px;
  --rotate-head: 0deg;
  -webkit-transform: rotate(var(--rotate-head));
          transform: rotate(var(--rotate-head));
  -webkit-transition: -webkit-transform 0.2s;
  transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
  transition: transform 0.2s, -webkit-transform 0.2s;
  -webkit-transform-origin: center 20px;
          transform-origin: center 20px;
}

.center .eye {
  display: inline-block;
  width: 25px;
  height: 25px;
  border-radius: 50%;
/*   background-color: #243946; */
  color: #e0e0e0;
  font-size: 30px;
}

.center .eye.eye--left {
  margin-right: 40px;
}

.center .eye.eye--right {
  margin-left: 100px;
}

.center .login {
  position: relative;
  display: -webkit-box;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
          flex-direction: column;
}

.center .login label {
  position: relative;
  padding: 0 20px;
}

.center .login label div.fa {
  position: absolute;
  top: 30%;
  left: 35px;
  color: #bbb;
}

.center .login label .fa:before {
  position: relative;
  left: 1px;
}

.center .login input,
.center .login .login-button {
  width: 100%;
  height: 35px;
  border: none;
  border-radius: 30px;
}

.center .login input {
  padding: 0 20px 0 40px;
  margin: 5px 0;
  box-shadow: none;
  outline: none;
}

.center .login input::-webkit-input-placeholder {
  color: #ccc;
}

.center .login input::-moz-placeholder {
  color: #ccc;
}

.center .login input:-ms-input-placeholder {
  color: #ccc;
}

.center .login input::-ms-input-placeholder {
  color: #ccc;
}

.center .login input::placeholder {
  color: #ccc;
}

.center .login input.password {
  padding: 0 50px 0 40px;
}

.center .login .password-button {
  position: absolute;
  top: 9px;
  right: 25px;
  display: -webkit-box;
  display: flex;
  -webkit-box-pack: center;
          justify-content: center;
  -webkit-box-align: center;
          align-items: center;
  width: 35px;
  height: 27px;
  border-radius: 30px;
  border: none;
  outline: none;
  background-color: #243946;
  color: #fff;
}

.center .login .password-button:active {
  -webkit-transform: scale(0.95);
          transform: scale(0.95);
}

.center .login .login-button {
  width: calc(100% - 40px);
  margin: 20px 20px 0;
  outline: none;
  background-color: #243946;
  color: #fff;
  -webkit-transition: -webkit-transform 0.1s;
  transition: -webkit-transform 0.1s;
  transition: transform 0.1s;
  transition: transform 0.1s, -webkit-transform 0.1s;
}

.center .login .login-button:active {
  -webkit-transform: scale(0.95);
          transform: scale(0.95);
}

.center .social-buttons {
  display: -webkit-box;
  display: flex;
  -webkit-box-pack: center;
          justify-content: center;
  margin-top: 25px;
}

.center .social-buttons .social {
  display: -webkit-box;
  display: flex;
  -webkit-box-pack: center;
          justify-content: center;
  -webkit-box-align: center;
          align-items: center;
  width: 35px;
  height: 35px;
  margin: 0 10px;
  border-radius: 50%;
  background-color: #243946;
  color: #fff;
  font-size: 18px;
  z-index: 50;
}

.center .social-buttons .social:active {
  -webkit-transform: scale(0.95);
          transform: scale(0.95);
}

.center .footer {
  text-align: center;
  margin-top: 15px;
}

.cloud {
  -webkit-animation: clouds 60s infinite linear;
  -moz-animation: clouds 60s infinite linear;
  -ms-animation: clouds 60s infinite linear;
  -o-animation: clouds 60s infinite linear;
  animation: clouds 60s infinite linear;
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
  border-radius: 10px;
  position: relative;
  margin: 33px 0 0 0;
  width: 54px;
  height: 5px;
  background: #f7e7eb;
}

.cloud.tiny {
  -moz-transform: scale(0.25, 0.25);
  -ms-transform: scale(0.25, 0.25);
  -webkit-transform: scale(0.25, 0.25);
  transform: scale(0.25, 0.25);
}

.cloud.small {
  -moz-transform: scale(0.5, 0.5);
  -ms-transform: scale(0.5, 0.5);
  -webkit-transform: scale(0.5, 0.5);
  transform: scale(0.5, 0.5);
}

.cloud.normal {
  -moz-transform: scale(1, 1);
  -ms-transform: scale(1, 1);
  -webkit-transform: scale(1, 1);
  transform: scale(1, 1);
}

.cloud.large {
  -moz-transform: scale(2, 2);
  -ms-transform: scale(2, 2);
  -webkit-transform: scale(2, 2);
  transform: scale(2, 2);
}

.cloud div {
  -moz-box-shadow: inset -2px -3px 0 0 #f7e7eb;
  -webkit-box-shadow: inset -2px -3px 0 0 #f7e7eb;
  box-shadow: inset -2px -3px 0 0 #f7e7eb;
  position: absolute;
  border-radius: 50%;
  width: 12px;
  height: 12px;
  left: -3px;
  bottom: 0;
  background: #fafbf0;
  z-index: 10;
}

.cloud div:first-child + div {
  -moz-transform: scale(1.6, 1.6);
  -ms-transform: scale(1.6, 1.6);
  -webkit-transform: scale(1.6, 1.6);
  transform: scale(1.6, 1.6);
  margin: 0 0 4px 13px;
  z-index: 9;
}
/* ... */

